@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7507 2004/10/21 03:39:04 xtraeme Exp $
+$NetBSD: CHANGES,v 1.7508 2004/10/21 05:28:17 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4798,3 +4798,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated source-highlight to 1.11 [seb 2004-10-21]
 	Added bash-3.0 [xtraeme 2004-10-21]
 	Updated nano to 1.2.4 [xtraeme 2004-10-21]
+	Updated libxml2 to 2.6.14 [xtraeme 2004-10-21]
